# connectivityserver

./: README.md  setup.cfg
deploy/: Dockerfile  README.md  connectivityserver.yaml
src/connection-service/: connection-flask.py
