[metadata]
name = connection-service
version = 1.0.0
url = https://github.com/DUNE-DAQ/connectivityserver
long_description = file: docs/README.md
long_description_content_type = text/markdown


[options]
packages = find:
package_dir = =src
include_package_data = true

[options.packages.find]
where = src
include_package_data = true